--- a/assets/css/Admitere.css
+++ b/assets/css/Admitere.css
@@ -44,7 +44,7 @@ overflow: hidden;
 .s1-md-bk {
     height: 100vh;
     width: 98.8vw;
-    background-image: url(/assets/imagini/Header/Media_Digitala_Brasov\ \(4\).jpg);
+    background-image: url(./assets/imagini/Header/Media_Digitala_Brasov\ \(4\).jpg);
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -56,7 +56,7 @@ overflow: hidden;
 }
 .buton1 {
     position: relative;
-    background-image: url(/assets/imagini/buton1.svg);
+    background-image: url(./assets/imagini/buton1.svg);
     width: 200px;
     height: 200px;
     display: flex;
