--- a/assets/css/generalstyle.css
+++ b/assets/css/generalstyle.css
@@ -190,6 +190,7 @@ h1 {
 	justify-content: space-around;
 	align-items: center;
 	flex-direction: row;
+	flex-wrap: wrap;
 
 }
 .frand3-social-media {
@@ -217,5 +218,32 @@ h1 {
 	color: white;
 	text-decoration: none;
 	line-height: 4px;
+}
+@media (max-width:725px) {
+	.fcontainer-principal {
+		display: flex;
+		max-width: 500px;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}
+	.frand2 {
+		width: 100%;
+		height: 100%;
+		flex-direction: column;
+		align-items: center;
+	
+	}
+	.fcoloana1 {
+		width: 100%;
+		display: flex;
+		justify-content: flex-start;
+		margin-bottom: -15px;
+	}
+	.img-footer {
+		width: 200px;
+		height: auto;
+		margin: 20px;	
+	}
 }
 /*Footer*/
